app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
    - port: 80
      targetPort: 3000
